<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_login_toolbar"
        android:background="@drawable/bgheader_login"
        android:layout_width="match_parent"
        android:layout_height="250dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_activity_email_input"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="70dp"
                android:drawableStart="@drawable/ic_action_email"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/login_activity_password_input"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:drawableStart="@drawable/ic_action_password"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/login_activity_login_btn"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/login_activity_ProgressBar"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/background_btn_color"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />

                <ProgressBar
                    android:id="@+id/login_activity_ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />
            </RelativeLayout>

            <Button
                android:id="@+id/login_activity_forgotPassword_btn"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_btn_white"
                android:text="Forgot password "
                android:textAllCaps="false"
                android:textColor="@color/colorbackgroundBtnStart" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account" />

                <TextView
                    android:id="@+id/login_activity_signup_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorDark"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>